--- a/server/package.json
+++ b/server/package.json
@@ -11,15 +11,16 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "aws-sdk": "^2.1319.0",
+    "aws-sdk": "^2.1341.0",
     "bcryptjs": "^2.4.3",
-    "body-parser": "^1.20.1",
+    "body-parser": "^1.20.2",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.0",
     "mongodb": "^5.0.1",
     "multer": "^1.4.5-lts.1",
-    "multer-s3": "^2.10.0"
+    "multer-s3": "^2.10.0",
+    "uuid": "^9.0.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.20"
