--- a/client/.env
+++ b/client/.env
@@ -1,2 +1,2 @@
 REACT_APP_GOOGLE_API_KEY=AIzaSyBFJz6zYSkAB1APFxHzmiGBoCkn0Ylron0
-REACT_APP_AWS_IMAGE_URL=https://spillimages.s3.us-east-2.amazonaws.com/
+REACT_APP_AWS_IMAGE_URL=https://airebnb.s3.us-east-2.amazonaws.com/
