--- a/client/.env
+++ b/client/.env
@@ -1,2 +1,3 @@
 REACT_APP_AWS_IMAGE_URL=https://airebnb.s3.us-east-2.amazonaws.com/
-REACT_APP_BACKEND_URL=http://localhost:5000/
+REACT_APP_BACKEND_URL=https://airbnb-clone-cm.herokuapp.com/
+# http://localhost:5000/
